--- a/index.html
+++ b/index.html
@@ -33,38 +33,41 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2025 Season</a>
 <ul>
+<li><a href="#rd10-canadian-grand-prix"
+id="toc-rd10-canadian-grand-prix"><span
+class="toc-section-number">1.1</span> Rd10 Canadian Grand Prix</a></li>
 <li><a href="#rd09-spanish-grand-prix"
 id="toc-rd09-spanish-grand-prix"><span
-class="toc-section-number">1.1</span> Rd09 Spanish Grand Prix</a></li>
+class="toc-section-number">1.2</span> Rd09 Spanish Grand Prix</a></li>
 <li><a href="#rd08-monaco-grand-prix"
 id="toc-rd08-monaco-grand-prix"><span
-class="toc-section-number">1.2</span> Rd08 Monaco Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd08 Monaco Grand Prix</a></li>
 <li><a href="#rd07-emilia-romagna-grand-prix"
 id="toc-rd07-emilia-romagna-grand-prix"><span
-class="toc-section-number">1.3</span> Rd07 Emilia Romagna Grand
+class="toc-section-number">1.4</span> Rd07 Emilia Romagna Grand
 Prix</a></li>
 <li><a href="#rd06-miami-grand-prix"
 id="toc-rd06-miami-grand-prix"><span
-class="toc-section-number">1.4</span> Rd06 Miami Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-saudi-arabian-grand-prix"
 id="toc-rd05-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.5</span> Rd05 Saudi Arabian Grand
+class="toc-section-number">1.6</span> Rd05 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd04-bahrain-grand-prix"
 id="toc-rd04-bahrain-grand-prix"><span
-class="toc-section-number">1.6</span> Rd04 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd04 Bahrain Grand Prix</a></li>
 <li><a href="#rd03-japanese-grand-prix"
 id="toc-rd03-japanese-grand-prix"><span
-class="toc-section-number">1.7</span> Rd03 Japanese Grand Prix</a></li>
+class="toc-section-number">1.8</span> Rd03 Japanese Grand Prix</a></li>
 <li><a href="#rd02-chinese-grand-prix"
 id="toc-rd02-chinese-grand-prix"><span
-class="toc-section-number">1.8</span> Rd02 Chinese Grand Prix</a></li>
+class="toc-section-number">1.9</span> Rd02 Chinese Grand Prix</a></li>
 <li><a href="#rd01-australian-grand-prix"
 id="toc-rd01-australian-grand-prix"><span
-class="toc-section-number">1.9</span> Rd01 Australian Grand
+class="toc-section-number">1.10</span> Rd01 Australian Grand
 Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.10</span> Pre-season test</a></li>
+class="toc-section-number">1.11</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2024 season</a>
@@ -157,8 +160,24 @@ class="toc-section-number">3</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2025 Season</h1>
-<h2 data-number="1.1" id="rd09-spanish-grand-prix"><span
-class="header-section-number">1.1</span> Rd09 Spanish Grand Prix</h2>
+<h2 data-number="1.1" id="rd10-canadian-grand-prix"><span
+class="header-section-number">1.1</span> Rd10 Canadian Grand Prix</h2>
+<p><a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<p><a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2.pdf">FP2:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd09-spanish-grand-prix"><span
+class="header-section-number">1.2</span> Rd09 Spanish Grand Prix</h2>
 <p><a href="./2025/2025-Rd09-Spanish-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -194,8 +213,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd09-Spanish-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd08-monaco-grand-prix"><span
-class="header-section-number">1.2</span> Rd08 Monaco Grand Prix</h2>
+<h2 data-number="1.3" id="rd08-monaco-grand-prix"><span
+class="header-section-number">1.3</span> Rd08 Monaco Grand Prix</h2>
 <p><a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -228,8 +247,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.3" id="rd07-emilia-romagna-grand-prix"><span
-class="header-section-number">1.3</span> Rd07 Emilia Romagna Grand
+<h2 data-number="1.4" id="rd07-emilia-romagna-grand-prix"><span
+class="header-section-number">1.4</span> Rd07 Emilia Romagna Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf">FP1:
@@ -277,8 +296,8 @@ href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.4" id="rd06-miami-grand-prix"><span
-class="header-section-number">1.4</span> Rd06 Miami Grand Prix</h2>
+<h2 data-number="1.5" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.5</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -315,8 +334,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.5" id="rd05-saudi-arabian-grand-prix"><span
-class="header-section-number">1.5</span> Rd05 Saudi Arabian Grand
+<h2 data-number="1.6" id="rd05-saudi-arabian-grand-prix"><span
+class="header-section-number">1.6</span> Rd05 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -363,8 +382,8 @@ href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd04-bahrain-grand-prix"><span
-class="header-section-number">1.6</span> Rd04 Bahrain Grand Prix</h2>
+<h2 data-number="1.7" id="rd04-bahrain-grand-prix"><span
+class="header-section-number">1.7</span> Rd04 Bahrain Grand Prix</h2>
 <p><a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -392,8 +411,8 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
-<h2 data-number="1.7" id="rd03-japanese-grand-prix"><span
-class="header-section-number">1.7</span> Rd03 Japanese Grand Prix</h2>
+<h2 data-number="1.8" id="rd03-japanese-grand-prix"><span
+class="header-section-number">1.8</span> Rd03 Japanese Grand Prix</h2>
 <p><a href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -430,8 +449,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd03-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.8" id="rd02-chinese-grand-prix"><span
-class="header-section-number">1.8</span> Rd02 Chinese Grand Prix</h2>
+<h2 data-number="1.9" id="rd02-chinese-grand-prix"><span
+class="header-section-number">1.9</span> Rd02 Chinese Grand Prix</h2>
 <p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -471,8 +490,9 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd02-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.9" id="rd01-australian-grand-prix"><span
-class="header-section-number">1.9</span> Rd01 Australian Grand Prix</h2>
+<h2 data-number="1.10" id="rd01-australian-grand-prix"><span
+class="header-section-number">1.10</span> Rd01 Australian Grand
+Prix</h2>
 <p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -510,8 +530,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd01-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.10" id="pre-season-test"><span
-class="header-section-number">1.10</span> Pre-season test</h2>
+<h2 data-number="1.11" id="pre-season-test"><span
+class="header-section-number">1.11</span> Pre-season test</h2>
 <p><a href="./2025/2025-Pre-Season-Testing-1-1.pdf">Day1:Plot
 PDF</a><br />
 <a href="./2025/2025-Pre-Season-Testing-1-1_laptime.csv">Day1:laptime
