--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@ href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2_laptime.csv">FP2:
 laptime csv</a><br />
 <a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-2_rcm.csv">FP2:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-3.pdf">FP3:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-3_laptime.csv">FP3:
+laptime csv</a><br />
+<a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-3_rcm.csv">FP3:
+race control message csv</a></p>
+<p><a href="./2025/2025-Rd10-Canadian-Grand-Prix-Qualifying.pdf">Q: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd10-Canadian-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2025/2025-Rd10-Canadian-Grand-Prix-Qualifying_rcm.csv">Q:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd09-spanish-grand-prix"><span
 class="header-section-number">1.2</span> Rd09 Spanish Grand Prix</h2>
 <p><a href="./2025/2025-Rd09-Spanish-Grand-Prix-Practice-1.pdf">FP1:
