--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@ href="./2025/2025-Rd13-Belgian-Grand-Prix-Practice-1_laptime.csv">FP1:
 laptime csv</a><br />
 <a href="./2025/2025-Rd13-Belgian-Grand-Prix-Practice-1_rcm.csv">FP1:
 race control message csv</a></p>
+<p><a
+href="./2025/2025-Rd13-Belgian-Grand-Prix-Sprint-Qualifying.pdf">SQ:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd13-Belgian-Grand-Prix-Sprint-Qualifying_laptime.csv">SQ:
+laptime csv</a><br />
+<a
+href="./2025/2025-Rd13-Belgian-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd12-british-grand-prix"><span
 class="header-section-number">1.2</span> Rd12 British Grand Prix</h2>
 <p><a href="./2025/2025-Rd12-British-Grand-Prix-Practice-1.pdf">FP1:
