--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd13-Belgian-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
+<p><a href="./2025/2025-Rd13-Belgian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2025/2025-Rd13-Belgian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd13-Belgian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd13-Belgian-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd12-british-grand-prix"><span
 class="header-section-number">1.2</span> Rd12 British Grand Prix</h2>
 <p><a href="./2025/2025-Rd12-British-Grand-Prix-Practice-1.pdf">FP1:
